--- a/client/package.json
+++ b/client/package.json
@@ -57,7 +57,8 @@
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
+    "workbox-webpack-plugin": "^6.4.1",
+    "babel-plugin-styled-components": "^2.1.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -84,7 +85,7 @@
   },
   "devDependencies": {
     "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-styled-components": "^2.1.4",
+
     "styled-components": "^6.0.4"
   },
   "jest": {
